bugfix: scrollbar conflicting css fix

--- a/src/scrollbar.css
+++ b/src/scrollbar.css
@@ -15,8 +15,9 @@
     background: var(--black);
 }
 
-@supports (scrollbar-color: red blue) {
-    * {
+@supports not selector(::-webkit-scrollbar) {
+    html {
         scrollbar-width: thin;
+        scrollbar-color: var(--gray) transparent;
     }
 }
